--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,23 @@ body {
   display: block;
 }
 
+.st-link {
+  position: relative;
+}
+
+.st-link .current::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 453px;
+  top: 76px;
+
+  background-color: var(--acent-color);
+  border-radius: 2px;
+  bottom: -1px;
+}
+
 .st-link:hover,
 .st-link:focus {
   color: var(--acent-color);
@@ -269,6 +286,26 @@ body {
 .portfolio-link:hover,
 .portfolio-link:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.items:hover .portfolio-top-text {
+  transform: translateY(0%);
+}
+.portfolio-wrap {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-top-text {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+
+  background-color: rgba(33, 150, 243, 0.9);
+  color: var(--primary-bg-color);
 }
 
 .cards {
