--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ body {
   height: 100%;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  
+  padding: 36px 24px;
 
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primary-bg-color);
