--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,8 @@
   --team-soc-icon-color: #afb1b8; /*колір іконок соцальних мереж*/
   --team-soc-link-hover-color: #2196f3; /*колір іконок ховеру-фокусу*/
   --footer-bg-icon-color: rgba(255, 255, 255, 0.1);
+  --hover-duration: 250ms;
+  --hover-time-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 p,
 h1,
@@ -121,11 +123,11 @@ body {
   display: block;
 }
 
-.st-link {
+/* .st-link {
   position: relative;
-}
+} */
 
-.st-link .current::after {
+/* .st-link .current::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -136,7 +138,7 @@ body {
   background-color: var(--acent-color);
   border-radius: 2px;
   bottom: -1px;
-}
+} */
 
 .st-link:hover,
 .st-link:focus {
@@ -301,8 +303,12 @@ body {
   top: 0;
   height: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding: 36px 24px;
+  transition: transform var(--hover-duration) var(--hover-time-function);
+  padding: 63px 24px;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1, 56;
+  letter-spacing: 0.03em;
 
   background-color: rgba(33, 150, 243, 0.9);
   color: var(--primary-bg-color);
@@ -496,6 +502,28 @@ body {
 .our-work-list .list + .list {
   margin-left: 30px;
 }
+
+.our-work-top-text {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  align-items: center;
+  justify-content: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--primary-bg-color);
+}
+
+.our-work-wrap:hover {
+  transform: translateY(0%);
+}
+
 .about-us {
   margin-bottom: 50px;
 
