--- a/css/styles.css
+++ b/css/styles.css
@@ -782,14 +782,15 @@ body {
 }
 
 .modal {
-  min-height: 581px;
-  width: 528px;
-  border-radius: 4px;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transition: transform 300ms;
-  transform: translate(-50%, -50%) scale(1) rotate(0);
+    min-height: 581px;
+    width: 528px;
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
+    border-radius: 4px;
+    top: 50%;
+    left: 50%;
+    transition: transform 300ms;
+    transform: translate(-50%, -50%) scale(1) rotate(0);
 
   background-color: var(--primary-bg-color);
 }
@@ -807,9 +808,9 @@ body {
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-sizing: border-box;
-  /* display: flex;
+  display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
   background-color: var(--primary-bg-color);
 }
 
